// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileOrders
    actions={
        Object {
            "activateEditCustomerField": [Function],
            "addLineItems": [Function],
            "cancelEditCustomerFields": [Function],
            "checkoutCustomerDisassociate": [Function],
            "signOutCustomer": [Function],
            "updateCustomer": [Function],
          }
    }
    checkout={
        Object {
            "completedAt": null,
            "currencyCode": "foo",
            "id": "foo",
            "lineItems": Object {},
            "note": null,
            "subtotalPrice": "0",
            "totalPrice": "0",
          }
    }
    orders={
        Array [
            Object {
              "date": "foo",
              "id": "foo",
              "items": Array [
                Object {
                  "price": "foo",
                  "subitems": Array [
                    Object {
                      "handle": "foo",
                      "quantity": 0,
                    },
                  ],
                  "title": "foo",
                },
              ],
            },
          ]
    }
    products={
        Array [
            Object {
              "foo": Object {
                "title": "foo",
              },
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="carter sub-title mb3"
>
          Order History
</h2>,
        <div>
          <div
                    className="card card--light-gray-border px3 pt3 pb2 my2"
          >
                    <p
                              className="bold text-peach mb3"
                    >
                              Invalid date
                    </p>
                    <div
                              className="mb2 flex flex-wrap justify-between"
                    >
                              <span
                                        className="line-item-title mr2"
                              >
                                        foo
                              </span>
                              <span
                                        className="line-item-title"
                              >
                                        $
                                        foo
                              </span>
                    </div>
                    <div
                              className="mt4 flex flex-wrap"
                    >
                              <Button
                                        childrenWrapperClassName=""
                                        className="tag mb2 mr2 bg-peach text-white w-auto"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="View Receipt"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="secondary"
                              />
                              <Button
                                        childrenWrapperClassName=""
                                        className="tag mb2 bg-peach text-white"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Re-order"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="secondary"
                              />
                    </div>
          </div>
</div>,
        null,
      ],
      "className": "my3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Order History",
          "className": "carter sub-title mb3",
        },
        "ref": null,
        "rendered": "Order History",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="card card--light-gray-border px3 pt3 pb2 my2"
>
              <p
                            className="bold text-peach mb3"
              >
                            Invalid date
              </p>
              <div
                            className="mb2 flex flex-wrap justify-between"
              >
                            <span
                                          className="line-item-title mr2"
                            >
                                          foo
                            </span>
                            <span
                                          className="line-item-title"
                            >
                                          $
                                          foo
                            </span>
              </div>
              <div
                            className="mt4 flex flex-wrap"
              >
                            <Button
                                          childrenWrapperClassName=""
                                          className="tag mb2 mr2 bg-peach text-white w-auto"
                                          color="white-denim"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="View Receipt"
                                          onClick={[Function]}
                                          onMouseEnter={[Function]}
                                          onMouseLeave={[Function]}
                                          openInCurrentTab={false}
                                          shadow={false}
                                          to=""
                                          type="button"
                                          variant="secondary"
                            />
                            <Button
                                          childrenWrapperClassName=""
                                          className="tag mb2 bg-peach text-white"
                                          color="white-denim"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="Re-order"
                                          onClick={[Function]}
                                          onMouseEnter={[Function]}
                                          onMouseLeave={[Function]}
                                          openInCurrentTab={false}
                                          shadow={false}
                                          to=""
                                          type="button"
                                          variant="secondary"
                            />
              </div>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "foo",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="bold text-peach mb3"
>
                  Invalid date
</p>,
                Array [
                  <div
                    className="mb2 flex flex-wrap justify-between"
>
                    <span
                                        className="line-item-title mr2"
                    >
                                        foo
                    </span>
                    <span
                                        className="line-item-title"
                    >
                                        $
                                        foo
                    </span>
</div>,
                ],
                <div
                  className="mt4 flex flex-wrap"
>
                  <Button
                                    childrenWrapperClassName=""
                                    className="tag mb2 mr2 bg-peach text-white w-auto"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="View Receipt"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="secondary"
                  />
                  <Button
                                    childrenWrapperClassName=""
                                    className="tag mb2 bg-peach text-white"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Re-order"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="secondary"
                  />
</div>,
              ],
              "className": "card card--light-gray-border px3 pt3 pb2 my2",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Invalid date",
                  "className": "bold text-peach mb3",
                },
                "ref": null,
                "rendered": "Invalid date",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": "undefined-0",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="line-item-title mr2"
>
                      foo
</span>,
                    <span
                      className="line-item-title"
>
                      $
                      foo
</span>,
                    null,
                  ],
                  "className": "mb2 flex flex-wrap justify-between",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "foo",
                      "className": "line-item-title mr2",
                    },
                    "ref": null,
                    "rendered": "foo",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "$",
                        "foo",
                      ],
                      "className": "line-item-title",
                    },
                    "ref": null,
                    "rendered": Array [
                      "$",
                      "foo",
                    ],
                    "type": "span",
                  },
                  null,
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Button
                      childrenWrapperClassName=""
                      className="tag mb2 mr2 bg-peach text-white w-auto"
                      color="white-denim"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label="View Receipt"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      openInCurrentTab={false}
                      shadow={false}
                      to=""
                      type="button"
                      variant="secondary"
/>,
                    <Button
                      childrenWrapperClassName=""
                      className="tag mb2 bg-peach text-white"
                      color="white-denim"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label="Re-order"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      openInCurrentTab={false}
                      shadow={false}
                      to=""
                      type="button"
                      variant="secondary"
/>,
                  ],
                  "className": "mt4 flex flex-wrap",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "childrenWrapperClassName": "",
                      "className": "tag mb2 mr2 bg-peach text-white w-auto",
                      "color": "white-denim",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "View Receipt",
                      "onClick": [Function],
                      "onMouseEnter": [Function],
                      "onMouseLeave": [Function],
                      "openInCurrentTab": false,
                      "shadow": false,
                      "to": "",
                      "type": "button",
                      "variant": "secondary",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "childrenWrapperClassName": "",
                      "className": "tag mb2 bg-peach text-white",
                      "color": "white-denim",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "Re-order",
                      "onClick": [Function],
                      "onMouseEnter": [Function],
                      "onMouseLeave": [Function],
                      "openInCurrentTab": false,
                      "shadow": false,
                      "to": "",
                      "type": "button",
                      "variant": "secondary",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="carter sub-title mb3"
>
            Order History
</h2>,
          <div>
            <div
                        className="card card--light-gray-border px3 pt3 pb2 my2"
            >
                        <p
                                    className="bold text-peach mb3"
                        >
                                    Invalid date
                        </p>
                        <div
                                    className="mb2 flex flex-wrap justify-between"
                        >
                                    <span
                                                className="line-item-title mr2"
                                    >
                                                foo
                                    </span>
                                    <span
                                                className="line-item-title"
                                    >
                                                $
                                                foo
                                    </span>
                        </div>
                        <div
                                    className="mt4 flex flex-wrap"
                        >
                                    <Button
                                                childrenWrapperClassName=""
                                                className="tag mb2 mr2 bg-peach text-white w-auto"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="View Receipt"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="secondary"
                                    />
                                    <Button
                                                childrenWrapperClassName=""
                                                className="tag mb2 bg-peach text-white"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Re-order"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="secondary"
                                    />
                        </div>
            </div>
</div>,
          null,
        ],
        "className": "my3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Order History",
            "className": "carter sub-title mb3",
          },
          "ref": null,
          "rendered": "Order History",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="card card--light-gray-border px3 pt3 pb2 my2"
>
                <p
                                className="bold text-peach mb3"
                >
                                Invalid date
                </p>
                <div
                                className="mb2 flex flex-wrap justify-between"
                >
                                <span
                                                className="line-item-title mr2"
                                >
                                                foo
                                </span>
                                <span
                                                className="line-item-title"
                                >
                                                $
                                                foo
                                </span>
                </div>
                <div
                                className="mt4 flex flex-wrap"
                >
                                <Button
                                                childrenWrapperClassName=""
                                                className="tag mb2 mr2 bg-peach text-white w-auto"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="View Receipt"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="secondary"
                                />
                                <Button
                                                childrenWrapperClassName=""
                                                className="tag mb2 bg-peach text-white"
                                                color="white-denim"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Re-order"
                                                onClick={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="secondary"
                                />
                </div>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "foo",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="bold text-peach mb3"
>
                    Invalid date
</p>,
                  Array [
                    <div
                      className="mb2 flex flex-wrap justify-between"
>
                      <span
                                            className="line-item-title mr2"
                      >
                                            foo
                      </span>
                      <span
                                            className="line-item-title"
                      >
                                            $
                                            foo
                      </span>
</div>,
                  ],
                  <div
                    className="mt4 flex flex-wrap"
>
                    <Button
                                        childrenWrapperClassName=""
                                        className="tag mb2 mr2 bg-peach text-white w-auto"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="View Receipt"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="secondary"
                    />
                    <Button
                                        childrenWrapperClassName=""
                                        className="tag mb2 bg-peach text-white"
                                        color="white-denim"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Re-order"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="secondary"
                    />
</div>,
                ],
                "className": "card card--light-gray-border px3 pt3 pb2 my2",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Invalid date",
                    "className": "bold text-peach mb3",
                  },
                  "ref": null,
                  "rendered": "Invalid date",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": "undefined-0",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <span
                        className="line-item-title mr2"
>
                        foo
</span>,
                      <span
                        className="line-item-title"
>
                        $
                        foo
</span>,
                      null,
                    ],
                    "className": "mb2 flex flex-wrap justify-between",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "foo",
                        "className": "line-item-title mr2",
                      },
                      "ref": null,
                      "rendered": "foo",
                      "type": "span",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "$",
                          "foo",
                        ],
                        "className": "line-item-title",
                      },
                      "ref": null,
                      "rendered": Array [
                        "$",
                        "foo",
                      ],
                      "type": "span",
                    },
                    null,
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <Button
                        childrenWrapperClassName=""
                        className="tag mb2 mr2 bg-peach text-white w-auto"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="View Receipt"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="secondary"
/>,
                      <Button
                        childrenWrapperClassName=""
                        className="tag mb2 bg-peach text-white"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="Re-order"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="secondary"
/>,
                    ],
                    "className": "mt4 flex flex-wrap",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": null,
                        "childrenWrapperClassName": "",
                        "className": "tag mb2 mr2 bg-peach text-white w-auto",
                        "color": "white-denim",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "View Receipt",
                        "onClick": [Function],
                        "onMouseEnter": [Function],
                        "onMouseLeave": [Function],
                        "openInCurrentTab": false,
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "secondary",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": null,
                        "childrenWrapperClassName": "",
                        "className": "tag mb2 bg-peach text-white",
                        "color": "white-denim",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "Re-order",
                        "onClick": [Function],
                        "onMouseEnter": [Function],
                        "onMouseLeave": [Function],
                        "openInCurrentTab": false,
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "secondary",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileOrders
    actions={
        Object {
            "addLineItems": [Function],
          }
    }
    orders={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="carter sub-title mb3"
>
          Order History
</h2>,
        <div>
          <div
                    className="card card--light-gray-border py4 px3 pb2 my2 flex flex-column items-center"
          >
                    <strong
                              className="bold block mb2 center"
                    >
                              Your order history will live here.
                    </strong>
                    <p
                              className="small center"
                    >
                              You don't have any past orders. Let's fix that!
                    </p>
                    <Button
                              childrenWrapperClassName=""
                              className="small mt3 pt0 pb1 h100 align-middle"
                              color="peach"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="Find your pint →"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              openInCurrentTab={false}
                              shadow={false}
                              to="/products"
                              type="button"
                              variant="primary-small"
                    />
          </div>
</div>,
        null,
      ],
      "className": "my3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Order History",
          "className": "carter sub-title mb3",
        },
        "ref": null,
        "rendered": "Order History",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="card card--light-gray-border py4 px3 pb2 my2 flex flex-column items-center"
>
            <strong
                        className="bold block mb2 center"
            >
                        Your order history will live here.
            </strong>
            <p
                        className="small center"
            >
                        You don't have any past orders. Let's fix that!
            </p>
            <Button
                        childrenWrapperClassName=""
                        className="small mt3 pt0 pb1 h100 align-middle"
                        color="peach"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="Find your pint →"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to="/products"
                        type="button"
                        variant="primary-small"
            />
</div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong
                className="bold block mb2 center"
>
                Your order history will live here.
</strong>,
              <p
                className="small center"
>
                You don't have any past orders. Let's fix that!
</p>,
              <Button
                childrenWrapperClassName=""
                className="small mt3 pt0 pb1 h100 align-middle"
                color="peach"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="Find your pint →"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to="/products"
                type="button"
                variant="primary-small"
/>,
            ],
            "className": "card card--light-gray-border py4 px3 pb2 my2 flex flex-column items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Your order history will live here.",
                "className": "bold block mb2 center",
              },
              "ref": null,
              "rendered": "Your order history will live here.",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "You don't have any past orders. Let's fix that!",
                "className": "small center",
              },
              "ref": null,
              "rendered": "You don't have any past orders. Let's fix that!",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "childrenWrapperClassName": "",
                "className": "small mt3 pt0 pb1 h100 align-middle",
                "color": "peach",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "Find your pint →",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "/products",
                "type": "button",
                "variant": "primary-small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="carter sub-title mb3"
>
            Order History
</h2>,
          <div>
            <div
                        className="card card--light-gray-border py4 px3 pb2 my2 flex flex-column items-center"
            >
                        <strong
                                    className="bold block mb2 center"
                        >
                                    Your order history will live here.
                        </strong>
                        <p
                                    className="small center"
                        >
                                    You don't have any past orders. Let's fix that!
                        </p>
                        <Button
                                    childrenWrapperClassName=""
                                    className="small mt3 pt0 pb1 h100 align-middle"
                                    color="peach"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Find your pint →"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to="/products"
                                    type="button"
                                    variant="primary-small"
                        />
            </div>
</div>,
          null,
        ],
        "className": "my3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Order History",
            "className": "carter sub-title mb3",
          },
          "ref": null,
          "rendered": "Order History",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card card--light-gray-border py4 px3 pb2 my2 flex flex-column items-center"
>
              <strong
                            className="bold block mb2 center"
              >
                            Your order history will live here.
              </strong>
              <p
                            className="small center"
              >
                            You don't have any past orders. Let's fix that!
              </p>
              <Button
                            childrenWrapperClassName=""
                            className="small mt3 pt0 pb1 h100 align-middle"
                            color="peach"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="Find your pint →"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            openInCurrentTab={false}
                            shadow={false}
                            to="/products"
                            type="button"
                            variant="primary-small"
              />
</div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong
                  className="bold block mb2 center"
>
                  Your order history will live here.
</strong>,
                <p
                  className="small center"
>
                  You don't have any past orders. Let's fix that!
</p>,
                <Button
                  childrenWrapperClassName=""
                  className="small mt3 pt0 pb1 h100 align-middle"
                  color="peach"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="Find your pint →"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  openInCurrentTab={false}
                  shadow={false}
                  to="/products"
                  type="button"
                  variant="primary-small"
/>,
              ],
              "className": "card card--light-gray-border py4 px3 pb2 my2 flex flex-column items-center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Your order history will live here.",
                  "className": "bold block mb2 center",
                },
                "ref": null,
                "rendered": "Your order history will live here.",
                "type": "strong",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "You don't have any past orders. Let's fix that!",
                  "className": "small center",
                },
                "ref": null,
                "rendered": "You don't have any past orders. Let's fix that!",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "childrenWrapperClassName": "",
                  "className": "small mt3 pt0 pb1 h100 align-middle",
                  "color": "peach",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "Find your pint →",
                  "onClick": [Function],
                  "onMouseEnter": [Function],
                  "onMouseLeave": [Function],
                  "openInCurrentTab": false,
                  "shadow": false,
                  "to": "/products",
                  "type": "button",
                  "variant": "primary-small",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
